$sampleRate and $regex edge cases should have error annotations

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Query 2020-11-02
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The $sampleRate match expression is allowed in validator expressions if it has an argument of 0 or 1. As such, each of these cases should have error annotations to allow for validation errors to be generated for $sampleRate. Additionally, a couple of edge cases for $regex (here  and here) should have error annotations as well.

            Assignee:
            Mihai Andrei
            Reporter:
            Mihai Andrei
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: