SERVER-51781 $sampleRate and $regex edge cases should have error annotations